Views Calendar 5.x
==================

Version 1.7
===========

- Move cached calendar info to cache_views so it gets cleared when views_invalidate_cache() is called.
- 185640 fix function and table name errors in install file.
- Keep devel module from appending queries to ical export.
- Calculation of max date for a month needs adjustment.
- Fix ical export to match changes in ical parser.
- Create a separate theme for remote nodes and make sure all remote nodes get necessary cleanup.
- Adapt calendar to use fixed DURATION handling in ical parser.
- Cleanup calendar ical import.
- 183877 get rid of constant for CALENDAR_PATH and just use drupal_get_path() when needed.
- Update of calendar ical module to use the new date ical parser.

Version 1.6
===========

- 182998 Use Date API handling of timezones instead of Drupal default timezone offset when computing calendar values.
- 182155 Make sure multiple event nodes get a unique identifer when testing if they have already been processed.
- 181390 Cache_clear_all was missing wildcard in hook_cron().
- Add theme to override default Views handling of page title.
- Several fixes needed so menu tabs and arguments work on urls with $args in them, like node/$arg/calendar.
- Make sure plugin works even_empty, add install file that can clear cached calendar settings.
- Move administrative code to separate file so it isn't always parsed.
- Move plugin display themes to calendar.theme.
- Cache calendar fields() and calendar views() arrays.
- 172073 Allow for non-calendar arguments before any calendar arguments to dynamically filter calendar.
- Remove date fields from default view to force user to add the right field. Tired of handling support questions about unexpected date fields.
- 171306 keep empty nodes out of ical feed.
- 166659 and 160378 clean up handling of header and footer on empty pages.